# pax

./: .gcloudignore  .gitignore  CAMERA_MANIFEST.md  CIS667_TermProject_Proposal_Final.qmd  DOWNLOAD_REMINDERS.md  GITHUB_SETUP.md  IMAGE_ORGANIZATION.md  Makefile  README.md  SECURITY_CHECK.md  index.html  pyproject.toml  setup_midnight_email.sh  stats.json  update_stats.sh
agentHandoff/: DAILY_PROTOCOL.md
docs/backup/backup_20251105_150716/: DOWNLOAD_REMINDERS.md  GCS_SETUP.md  MIDNIGHT_EMAIL_SETUP.md  cameras_expanded_34th_66th.yaml  corridor_cameras_validated.yaml  pyproject.toml  setup_6hour_reminders.sh  setup_github.sh
docs/backup/backup_20251105_150716/term project/: CIS667_TermProject_Proposal_Final.html  CIS667_TermProject_Proposal_Final.qmd  CIS667_TermProject_Proposal_NSF_Style.qmd  DCM_StreetNameChanges_Lines.shp.xml  DCM_StreetNameChanges_Points.shp.xml  DCM_StreetName_ExportFeature.shp.xml  PROPOSAL_REFLECTION.md  PROPOSAL_VERSIONS_SUMMARY.md  README.md  compute_actual_intersections.py  corridor_streets_final.geojson  create_final_state_space_map.py  create_official_camera_map.py  create_path_maps.py  create_state_space_map.py  generate_manhattan_osm_map.py  generate_manhattan_real_map.py  manhattan_dcm_full.geojson  process_all_screenshots.py
docs/backup/backup_20251105_150716/term project/bigquery_data/: eda_analysis.py
docs/backup/backup_20251105_150716/term project/drafts/: CIS667_TermProject_Proposal.qmd  CIS667_TermProject_Proposal_Claude.qmd  CIS667_TermProject_Proposal_Concise.qmd  claude's_Energetic Pathfinding and Perceptual Heu.ini
(+681 files in other folders)
